# my_project

./: .coverage  .flake8  .gitignore  README.md  pyproject.toml  setup.py
src/: __init__.py  processing.py  widget.py
src/masks/: __init__.py  masks.py
tests/: __init__.py  conftest.py  test_masks.py  test_minimal.py  test_processing.py  test_widget.py
